# gust

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: email_cron.yml  gust_cron.yml  test_deploy.yml
src/gust/: add_one.py  cli.py  error.py  report.py  send.py
src/gust/data/: prompt.md  system_prompt.md
tests/: test_add_one.py  test_cli.py  test_reporter.py
