[project]
name = "gust"
version = "0.1.0"
description = "What's the main goal of this package?"
authors = [
    { name = "David Zhang" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
]


build = [
    "build==1.3.0",
]




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
